fixed overlapping circle

--- a/medminder/src/App.css
+++ b/medminder/src/App.css
@@ -94,7 +94,7 @@ p{
 }
 
 .circle6{
-    margin-top: 2%;
+    margin-top: 10%;
     width: 100px;
     height: 100px;
     background: linear-gradient(132deg,white,#b28d71, black);
